# SentinelChecker

./: CMakeLists.txt  README.md  build-naoqi-linux-modules.sh  buildcross-naoqi-nao-modules.sh  qiproject.xml
src/: SentinelChecker.cpp  SentinelChecker.h  SentinelCheckerMain.cpp
